--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "larryli/ipv4-console",
   "description": "IP v4 中国城市地址库控制台命令",
   "homepage": "https://github.com/larryli/ipv4-console",
-  "minimum-stability": "alpha",
+  "minimum-stability": "beta",
   "license": "MIT",
   "authors": [
     {
@@ -12,7 +12,7 @@
   ],
   "require": {
     "php": ">=5.4",
-    "larryli/ipv4-medoo": "1.0.0-alpha3",
+    "larryli/ipv4-medoo": "~1.0.0-beta",
     "symfony/console": "~2.5",
     "symfony/process": "~2.0",
     "symfony/yaml": "~2.0"
