--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "larryli/ipv4-medoo": "~1.0.0-beta",
     "symfony/console": "~2.5",
     "symfony/process": "~2.0",
-    "symfony/yaml": "~2.0"
+    "symfony/yaml": "~2.0",
+    "larryli/ipv4": "1.0.0-beta2"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.5"
