--- a/ipv4.yaml
+++ b/ipv4.yaml
@@ -13,10 +13,10 @@ database:
 
 providers:
   monipdb:
-#    class: \larryli\ipv4\MonIPDBQuery
+#    class: \larryli\ipv4\MonipdbQuery
     filename: ~/.ipv4/17monipdb.dat
   qqwry:
-#    class: \larryli\ipv4\QQWryQuery
+#    class: \larryli\ipv4\QqwryQuery
     filename: ~/.ipv4/qqwry.dat
   full:
 #    class: \larryli\ipv4\FullQuery
@@ -36,10 +36,10 @@ providers:
     providers:
       - full
   freeipip:
-#    class: \larryli\ipv4\FreeIPIPQuery
+#    class: \larryli\ipv4\FreeipipQuery
 #  taobao:
 #    class: \larryli\ipv4\TaobaoQuery
 #  sina:
 #    class: \larryli\ipv4\SinaQuery
 #  baidumap:
-#    class: \larryli\ipv4\BaiduMapQuery
+#    class: \larryli\ipv4\BaidumapQuery
